Reenable Pre and Color events